--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#A9A9A9 "
+    android:background="#989898"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -65,7 +65,7 @@
 
     <TextView
         android:id="@+id/Ans4"
-        android:elevation="3dp"
+        android:elevation="8dp"
         android:gravity="center"
         android:layout_width="150dp"
         android:layout_height="100dp"
@@ -75,6 +75,7 @@
         android:layout_marginRight="20dp"
         android:text="@string/bill_gates"
         android:textAlignment="center"
+
         android:textSize="25sp" />
 
     <TextView
@@ -82,31 +83,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="620dp"
-        android:layout_marginLeft="150sp"
-        android:elevation="8dp"
+        android:layout_marginLeft="140sp"
         android:gravity="center"
         android:textSize="25sp"/>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/refresh"
+        android:layout_marginTop="620dp"
+        android:layout_marginLeft="45dp"
+        android:src="@drawable/ic_refresh"/>
 
     <ImageView
         android:id="@+id/hide"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="620dp"
-        android:layout_marginLeft="300sp"
+        android:layout_marginLeft="330dp"
         android:src="@drawable/ic_iconmonstr_eye_8"/>
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/see"
         android:layout_marginTop="620dp"
-        android:layout_marginLeft="300sp"
+        android:layout_marginLeft="330dp"
         android:src="@drawable/ic_see"/>
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/refresh"
-        android:layout_marginTop="620dp"
-        android:layout_marginLeft="45sp"
-        android:src="@drawable/ic_refresh"/>
+
 
 </RelativeLayout>
