--- a/app/src/main/res/drawable/incorrect.xml
+++ b/app/src/main/res/drawable/incorrect.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners android:radius="30dp"></corners>
+    <solid android:color="#ff0000"
 
-    <solid android:color="#bababa"/>
-    <corners android:radius="50dp"></corners>
+        />
+
 </shape>
